# TheSandboxCell

./: .gitignore  CMakeLists.txt  CREDITS.txt  LICENSE  Makefile  README.md  TODO.md  TSC_FORMAT.md  \  build.sh  libtsc.lua  mkdocs.yml  new_build.lua
data/: benches.txt
data/blueprints/: Shooter.txt
data/mods/: .exist
data/resources/default/: pack.json
data/shaders/: repeating.glsl
docs/: index.md
docs/Architecture/: index.md
docs/Settings/: 00_index.md  01_performance.md  02_graphics.md  03_audio.md  04_saving.md
mods/more_gens/: Makefile  config.json
mods/more_gens/src/: common.h  libtsc.h  main.c  replicators.h
mods/more_movers/: Makefile
mods/more_movers/src/: common.h  main.c  pullers.c  pullers.h
mods/timetravel/: Makefile  config.json
mods_src/dll_test/: Makefile  libtsc.h  main.c
mods_src/more_gens/: Makefile
mods_src/more_gens/src/: libtsc.h  main.c  replicators.c
mods_src/more_movers/: Makefile  config.json
mods_src/more_movers/src/: libtsc.h  main.c  pushers.c  pushers.h
mods_src/timetravel/: Makefile  config.json  main.lua
mods_src/timetravel/src/: timeclock.lua
platforms_src/lua54/: Makefile
platforms_src/lua54/src/: common.c  common.h  libtsc.h  main.c
shaders/: repeating.glsl
src/: json_tests_what_would_be_a_good_name.c  main.c  testing.c  testing.h  utils.c  utils.h
src/api/: api.c  api.h  modloader.c  tscjson.c  tscjson.h  tscjson_arrays.h  tscjson_decode.c  tscjson_encode.c  tscjson_error.c  tscjson_macros.h  value.c  value.h
src/cells/: cell.c  grid.c  grid.h  particles.c  subticks.c  subticks.h  ticking.c  ticking.h
src/graphics/: nui.c  nui.h  rendering.c  rendering.h  resources.c  resources.h  ui.c  ui.h  ui2.c  ui2.h  ui3.h
src/saving/: saving.c  saving.h  saving_buffer.c  test_saving.c  test_saving.h
src/threads/: threads.h  tinycthread.c  workers.c  workers.h
targetinfo/: linux.lua  windows.lua
textures_dev/: empty.png~  generator.png~  push.png~  rotator_ccw.png~  slide.png~  trash.png~
(+11 files in other folders)
